// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TJViewer type 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "__typename": "TraningJournalViewer",
    },
  },
}
`;

exports[`renders Unautorized type 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "__typename": "Unauthorized",
    },
  },
}
`;
